# mixer_controller

./: Cargo.toml
frontend/: index.html  index.js  main.js
src/: broadcast.rs  controller.rs  controllers.rs  main.rs  state_map.rs
static/: index.html  index.js  tabs.js
tmp/: 01V.txt  dyn stuff.txt  split.py
