[package]
name = "mixer_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
midir = "0.10.1"
serde_json = "1.0.138"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.9.0"
actix-cors = "0.7.0"
bimap = "0.6.3"
futures-util = "0.3.31"
actix-web-lab = "0.23.0"
tokio = "1.43.0"
tokio-stream = "0.1.17"
env_logger = "0.11.6"
futures = "0.3.31"
actix-files = "0.6.6"
